--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Estamos trabajando en este sitio web. El sitio web de Duggan Bayerque Zuzulich estará disponible muy pronto. ¡Gracias!">
+    <meta name="keywords" content="Duggan Bayerque Zuzulich, sitio web en construcción, en desarrollo, próximamente disponible">
+    <meta name="author" content="Duggan Bayerque Zuzulich">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Estamos trabajando en este sitio web">
+    <meta property="og:description" content="El sitio web de Duggan Bayerque Zuzulich estará disponible muy pronto. ¡Gracias!">
     <title>Duggan Bayerque Zuzulich - En Construcción</title>
     <style>
         body {
