--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ var woocommerce_params = {"ajax_url":"\/wp-admin\/admin-ajax.php","wc_ajax_url":
 				<div class="elementor-element elementor-element-ea337d8 elementor-align-center elementor-widget elementor-widget-button" data-id="ea337d8" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 							<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="dugganbayerquezuzulich.com/videos">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="/videos">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">View more</span>
 					</span>
