--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<title>new-page – Consultant</title>
+	<title>Duggan Bayerque Zuzulich</title>
 <meta name="robots" content="max-image-preview:large">
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<link rel="alternate" type="application/rss+xml" title="Consultant » Feed" href="https://sm-e5124c.ingress-alpha.ewp.live/feed/">
